EEC_InitBackup/src/objects/Licensing_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Medication_Administration_Training_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the Medication Administration Training Certificate has been uploaded.</inlineHelpText>
        <label>Medication Administration Training Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Elements_For_Closing_Part_1__c</fullName>
        <formula>IF( NOT(OR(ISPICKVAL(Status__c , &quot;Under Review&quot;), ISPICKVAL(Status__c , &quot;Approved By Manager&quot;))), &quot;Status Incorrect - &quot;, &quot;&quot;) 
&amp; 
IF ( Fee_Paid__c = FALSE, &quot;Fee Not Paid - &quot;, &quot;&quot;) 
&amp; 
IF ( AND ( Approved_by_Manager__c = FALSE, OR( RecordType.Name = &quot;FCC New License&quot; , AND ( RecordType.Name = &quot;FCC Renewal&quot;, TODAY() &gt;= Provider__r.Renewal_date__c ), Assigned_To__r.Need_Supervisor_Approval__c = TRUE, Other_Condition__c = TRUE)), &quot;Need Manager Approval - &quot;, &quot;&quot; ) 
&amp; 
IF( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;), 

IF ( ISPICKVAL(License_Requested__c ,&quot;&quot;), &quot;License Requested not filled - &quot;,&quot;&quot;) 
&amp; 
IF(  ISPICKVAL( License_Type__c ,&quot;&quot;), &quot;License Type not filled - &quot;,&quot;&quot;) 
&amp; 
IF( ISBLANK( License_Issue_Date__c ), &quot;License Issue Date not filled - &quot;,&quot;&quot;),&quot;&quot;
)</formula>
        <label>Missing Elements For Closing Part 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Elements_For_Closing__c</fullName>
        <formula>Missing_Elements_For_Licensor__c</formula>
        <inlineHelpText>List of items that are not met before the transaction can be processed and closed</inlineHelpText>
        <label>Missing Elements For Finalizing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Elements_For_Licensor__c</fullName>
        <formula>IF( NOT(OR(ISPICKVAL(Status__c , &quot;Under Review&quot;), ISPICKVAL(Status__c , &quot;Approved By Manager&quot;))), &quot;Status Incorrect - &quot;, &quot;&quot;) 
&amp; 
IF ( Fee_Paid__c = FALSE, &quot;Fee Not Paid - &quot;, &quot;&quot;) 
&amp; 
IF ( AND ( Approved_by_Manager__c = FALSE, OR( RecordType.Name = &quot;FCC New License&quot; , AND ( RecordType.Name = &quot;FCC Renewal&quot;, TODAY() &gt;= Provider__r.Renewal_date__c +  Provider__r.Config_Record__r.FCC_Renewal_Significant_Delay__c  ), Assigned_To__r.Need_Supervisor_Approval__c = TRUE, Other_Condition__c = TRUE)), &quot;Need Manager Approval - &quot;, &quot;&quot; ) 
&amp; 
IF( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;), 
IF(ISBLANK( License_Expiration_Date__c), &quot;License Expiration Date not filled - &quot;,&quot;&quot;) 
&amp; 
IF( ISBLANK( License_Issue_Date__c ), &quot;License Issue Date not filled - &quot;,&quot;&quot;)
&amp;
IF ( ISPICKVAL(License_Requested__c ,&quot;&quot;), &quot;License Requested not filled - &quot;,&quot;&quot;) 
&amp; 
IF(  ISPICKVAL( License_Type__c ,&quot;&quot;), &quot;License Type not filled - &quot;,&quot;&quot;),&quot;&quot;
)
&amp;
IF (  Document_Information_Missing__c = TRUE, &quot;Document or Information missing - &quot;,&quot;&quot;)

&amp; 

IF( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;), 

IF( Training_Review__c = FALSE, &quot;Exp. / Training Not Reviewed - &quot;, &quot;&quot;) 

,&quot;&quot;) 

&amp; 

IF( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;Change of Address&quot;), 

IF( ISBLANK(Licensee_CORI_Reception_Date__c ), &quot;Licensee CORI Missing - &quot;, &quot;&quot;)
&amp; 
IF( ISBLANK(SORI_Reception_Date__c ), &quot;SORI Missing - &quot;, &quot;&quot;)
&amp;
IF( ISBLANK(Licensee_DCF_Reception_Date__c ), &quot;Licensee DCF Missing - &quot;, &quot;&quot;) 
&amp;
IF( Associated_Visit__c = FALSE, &quot;No Attached Visit - &quot;, &quot;&quot;),
&quot;&quot;)
&amp;

IF( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;Change of Address&quot;, RecordType.Name = &quot;FCC Change of Household&quot;),

IF( Other_Persons_CORI_Received__c = FALSE, &quot;On Premise Persons CORI Missing - &quot;, &quot;&quot;)
&amp;
IF( Other_Persons_DCF_Received__c = FALSE, &quot;On Premise Persons DCF Missing - &quot;, &quot;&quot;)
,&quot;&quot;)

&amp; 

IF( AND( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;Change of Address&quot;, RecordType.Name = &quot;FCC Change Room / Floor Level&quot;), Indoor_Outdoor_Space_Review__c = FALSE), &quot;Indoor / Outdoor Space Not Reviewed - &quot;, &quot;&quot;) 
&amp; 

IF( Other_Info_Reviewed__c = FALSE, &quot;Other Info Not Reviewed - &quot;, &quot;&quot;) 

&amp; 

IF( AND( OR( RecordType.Name = &quot;FCC New License&quot; , RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;Change of Address&quot;, RecordType.Name = &quot;FCC Change Room / Floor Level&quot;, RecordType.Name = &quot;FCC Change of Household&quot;), AND( No_Condition_Flag__c = FALSE, Condition_Added__c = FALSE)), &quot;Conditions Not Finalized&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If not empty, then work remains on this transaction to be ready to be closed or picked up by Admin staff to issue a license / close.</inlineHelpText>
        <label>Missing Elements For Licensor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_to_move_to_Under_Review__c</fullName>
        <formula>IF(Provider__r.RecordType.Name = &quot;Family Child Care&quot; &amp;&amp; (ISBLANK(Submission_Date__c) || ISBLANK( Submitter__c )),&quot;Not Submitted - &quot;,&quot;&quot;)

&amp;

IF(Provider__r.RecordType.Name = &quot;Family Child Care&quot; &amp;&amp; Fee_Paid__c = FALSE, &quot;Fee Not Received - &quot;,&quot;&quot;)

&amp;

IF(
(
Provider__r.RecordType.Name = &quot;Family Child Care&quot; 
&amp;&amp; 
OR(RecordType.Name = &quot;FCC New License&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;FCC Renewal&quot;)
&amp;&amp;
NOT(ISPICKVAL(Tax_Certification_Status__c , &quot;Completed&quot;))
),
&quot;Tax Certification Statement not Completed (Signed) - &quot;,&quot;&quot;)

&amp;

IF(
(
Provider__r.RecordType.Name = &quot;Family Child Care&quot; 
&amp;&amp; 
OR(RecordType.Name = &quot;FCC New License&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;Change of Address&quot; )
&amp;&amp;
NOT(ISPICKVAL(Licensee_BRC_Consent_Status__c , &quot;Completed&quot;))
),
&quot;Licensee BRC Consent not Completed (Signed) - &quot;,&quot;&quot;)

&amp;

IF(
(
Provider__r.RecordType.Name = &quot;Family Child Care&quot; 
&amp;&amp; 
OR(RecordType.Name = &quot;FCC New License&quot;, RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;FCC Renewal&quot;, RecordType.Name = &quot;Change of Address&quot;, RecordType.Name = &quot;FCC Change of Household&quot; )
&amp;&amp;
Other_Person_BRC_Consent_Completed__c = FALSE
),
&quot;Other Individuals BRC Consent not Signed&quot;,&quot;&quot;)</formula>
        <label>Missing to move to Under Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moving_Date__c</fullName>
        <label>Moving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nb_Hhold_Mbr_with_BRC_Consent_Complete__c</fullName>
        <label>Nb Hhold Mbr with BRC Consent Complete</label>
        <summaryFilterItems>
            <field>Household_Member__c.BRC_Consent_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_Hhold_Mbr_with_BRC_OK__c</fullName>
        <label>Nb Hhold Mbr with BRC OK</label>
        <summaryFilterItems>
            <field>Household_Member__c.BRC_Done__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_Hhold_Mbr_with_CORI_Result__c</fullName>
        <description>Roll up summary to count the number of HH Member with CORI Reception Date not NULL</description>
        <inlineHelpText>Roll up summary to count the number of HH Member with CORI Reception Date not NULL</inlineHelpText>
        <label>Nb Hhold Mbr with CORI Result</label>
        <summaryFilterItems>
            <field>Household_Member__c.CORI_Reception_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nb_Hhold_Mbr_with_DCF_Result__c</fullName>
        <description>Roll up summary to count the number of HH members with DCF Reception Date not NULL</description>
        <inlineHelpText>Roll up summary to count the number of HH members with DCF Reception Date not NULL</inlineHelpText>
        <label>Nb Hhold Mbr with DCF Result</label>
        <summaryFilterItems>
            <field>Household_Member__c.DCF_Reception_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Need_Assist_to_Barricade_Heating_Units__c</fullName>
        <description>Need Assistance  to Barricade Heating Units?</description>
        <label>Need Assist. to Barricade Heating Units?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Address_Phone_Number__c</fullName>
        <label>New Address Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipName>Licensing_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_First_Name__c</fullName>
        <inlineHelpText>New first name submitted by provider</inlineHelpText>
        <label>New First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Last_Name__c</fullName>
        <inlineHelpText>New last name submitted by provider</inlineHelpText>
        <label>New Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Phone_Number_Unlisted__c</fullName>
        <label>New Phone Number Unlisted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_State__c</fullName>
        <label>New State</label>
        <picklist>
            <picklistValues>
                <fullName>MA</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Street_Address_1__c</fullName>
        <label>New Street Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Street_Address_2__c</fullName>
        <label>New Street Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Zip_Code__c</fullName>
        <label>New Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Condition_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Condition Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Household_Member_with_BRC_Req__c</fullName>
        <label>Number of Household Member with BRC Req</label>
        <summaryFilterItems>
            <field>Household_Member__c.BRC_Required__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Observations_Comments__c</fullName>
        <label>Observations / Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Condition__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IS checked if a condition &quot;Other&quot; is added to the transaction</inlineHelpText>
        <label>Other Condition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Info_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Info Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Person_BRC_Consent_Completed__c</fullName>
        <formula>Nb_Hhold_Mbr_with_BRC_Consent_Complete__c  = Number_of_Household_Member_with_BRC_Req__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Person BRC Consent Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Persons_BRC_Done_Formula__c</fullName>
        <formula>Number_of_Household_Member_with_BRC_Req__c =  Nb_Hhold_Mbr_with_BRC_OK__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Persons BRC Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Persons_CORI_Received__c</fullName>
        <formula>Nb_Hhold_Mbr_with_CORI_Result__c &gt;= Number_of_Household_Member_with_BRC_Req__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Persons CORI Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Persons_DCF_Received__c</fullName>
        <formula>Nb_Hhold_Mbr_with_DCF_Result__c &gt;=  Number_of_Household_Member_with_BRC_Req__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Persons DCF Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outdoor_Space_Changed__c</fullName>
        <label>Outdoor Space Changed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outdoor_Space_Changes_Description__c</fullName>
        <label>Outdoor Space Changes Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PPM_Meeting_Attended_Date__c</fullName>
        <formula>Provider__r.PPM_Meeting_Attended_Date__c</formula>
        <label>PPM Meeting Attended Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pending_Email_to_Provider_Rgd_Trans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if there is a pending email communication to provider on account of updates to the transaction. If TRUE, processes can inspect this value and trigger an email alert and then turn this back to FALSE till needed again by another transaction update.</description>
        <inlineHelpText>Indicates if there is a pending email communication to provider on account of updates to the transaction. If TRUE, processes can inspect this value and trigger an email alert and then turn this back to FALSE till needed again by another transaction update</inlineHelpText>
        <label>Pending Email to Provider Rgd Trans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Provider_Y_N__c</fullName>
        <description>Designates a Provider either as a Portal Provider or not, based on Provider -&gt; Electronic Communication Field. Separate field is needed as some process updates on License Transactions are unable to access the Provider field, so will use this instead</description>
        <formula>IF(Provider__r.Electronic_Communication__c = TRUE, TRUE, FALSE)</formula>
        <inlineHelpText>Designates a Provider either as a Portal Provider or not, based on Provider -&gt; Electronic Communication Field</inlineHelpText>
        <label>Portal Provider (Y/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prev_App_Certif_with_Another_State_Desc__c</fullName>
        <inlineHelpText>Previous Application / Certification with Another State Description</inlineHelpText>
        <label>Prev App/Certif with Another State Desc.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prev_App_Certif_with_Another_State__c</fullName>
        <inlineHelpText>Previous Application / Certification with Another State</inlineHelpText>
        <label>Prev. App. / Certif. with Another State</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prev_App_Certif_with_EEC_Descrip__c</fullName>
        <inlineHelpText>Previous Application / Certification with EEC Description</inlineHelpText>
        <label>Prev. App. / Certif. with EEC Descrip</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Application_Certif_with_EEC__c</fullName>
        <inlineHelpText>Previous Application / Certification with EEC</inlineHelpText>
        <label>Previous Application / Certif. with EEC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Involvement_with_EEC_for_Unlice__c</fullName>
        <inlineHelpText>Previous Involvement with EEC for Unlicensed Child Care</inlineHelpText>
        <label>Prev. Involv. EEC Unlicensed Child Care</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_First_Name__c</fullName>
        <inlineHelpText>First Name of the applicant prior to change</inlineHelpText>
        <label>Prior First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Last_Name__c</fullName>
        <inlineHelpText>Last Name of the Provider prior submitted change</inlineHelpText>
        <label>Prior Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_New_Provider_Name__c</fullName>
        <inlineHelpText>Once this transaction is processed, the provider name will be changed to this value</inlineHelpText>
        <label>Proposed New Provider Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Email__c</fullName>
        <label>Provider Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Reord_Type_Is__c</fullName>
        <description>Checks whether the Provider&apos;s Record Type for the Licensing Transaction is Family Child Care</description>
        <formula>Provider__r.Record_Type_Name__c = &quot;Family Child Care&quot;</formula>
        <inlineHelpText>Checks whether the Provider&apos;s Record Type for the Licensing Transaction is Family Child Care</inlineHelpText>
        <label>Provider Reord Type Is Family Child Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notContain</operation>
                <value>Umbrella</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licensing Transactions</relationshipLabel>
        <relationshipName>Licensing_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ready_for_Closing__c</fullName>
        <formula>IF(ISBLANK( Missing_Elements_For_Closing__c ),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If checked, transactions can be processed and closed.</inlineHelpText>
        <label>Ready for Closing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_for_Procession_By_Admin__c</fullName>
        <formula>IF(ISBLANK(  Missing_Elements_For_Licensor__c  ),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If checked, transactions can be moved to Admin queue for final processing</inlineHelpText>
        <label>Ready for Processing By Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Closed_Cancelled__c</fullName>
        <label>Reason Transaction Closed / Cancelled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <label>Reason for Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_Qualifies_to_Schedule_Visit__c</fullName>
        <description>If record type is one of four types (FCC Renewal, FCC New License, FCC License Upgrade or Change of Address) evaluates to True and will be used to qualify for Scheduling Visit. Other record types evaluate to false and will not require a scheduled visit</description>
        <formula>OR( RecordType.Name = &quot;FCC Renewal&quot;,  RecordType.Name = &quot;FCC New License&quot;,  RecordType.Name = &quot;FCC License Upgrade&quot;,  RecordType.Name = &quot;Change of Address&quot;)</formula>
        <inlineHelpText>If record type is one of four types (FCC Renewal, FCC New License, FCC License Upgrade or Change of Address) evaluates to True and will be used to qualify for Scheduling Visit.</inlineHelpText>
        <label>Record Type Qualifies to Schedule Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registering_as_Sex_Offender__c</fullName>
        <label>Registering as Sex Offender</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restraining_Order_Description__c</fullName>
        <label>Restraining Order Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Restraining_Order_Issued__c</fullName>
        <label>Restraining Order Issued</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revocation_Suspension_Surrender_Reas__c</fullName>
        <inlineHelpText>Revocation / Suspension / Surrender Reasons</inlineHelpText>
        <label>Revocation / Suspen. / Surrender Reas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S3_Attachments__c</fullName>
        <defaultValue>&quot;[]&quot;</defaultValue>
        <description>This is a JSON string of all the attachments stored in S3 for a given Licensing Transaction.</description>
        <label>S3 Attachments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SIDS_Training_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the SIDS Training Certificate has been uploaded.</inlineHelpText>
        <label>SIDS Training Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SORI_Reception_Date__c</fullName>
        <label>SORI Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SORI_Result__c</fullName>
        <label>SORI Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved after discretionary review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sex_Offender_Nature_of_Incident__c</fullName>
        <label>Sex Offender Nature of Incident</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Provider Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Submit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Manager Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved By Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (Processed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed (License Issued / Updated)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stove_Meets_Requirements_Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Stove Meets Requirements Evidence has been uploaded.</description>
        <label>Stove Meets Requirements Evidence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitter_Email_Address__c</fullName>
        <description>Submitter email address used in email templates.</description>
        <formula>Submitter__r.Email</formula>
        <label>Submitter Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Licensing_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Cert_Statement_Signed_Date__c</fullName>
        <inlineHelpText>Date / Time the tax certification statement was signed</inlineHelpText>
        <label>Tax Certification Statement Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tax_Certification_Required_and_Complete__c</fullName>
        <description>Sets flag to TRUE if Tax Certification Statement Status = Completed AND (if record type = FCC License Upgrade or FCC New License or FCC Renewal)</description>
        <formula>AND(  ISPICKVAL(Tax_Certification_Status__c, &quot;Completed&quot;), OR( RecordType.Name = &quot;FCC License Upgrade&quot;, RecordType.Name = &quot;FCC New License&quot;,  RecordType.Name = &quot;FCC Renewal&quot;) )</formula>
        <inlineHelpText>Is Tax Certification Statement Status = Completed AND is (record type = FCC License Upgrade or FCC New License or FCC Renewal)</inlineHelpText>
        <label>Tax Certification Required and Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Certification_Statement_Request_Date__c</fullName>
        <inlineHelpText>Date the electronic version of Tax Certification Statement was first requested</inlineHelpText>
        <label>Tax Certification Statement Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Certification_Status__c</fullName>
        <inlineHelpText>Status of the Tax Certification Statement (Completed means Signed)</inlineHelpText>
        <label>Tax Certification Statement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Assistance__c</fullName>
        <label>Technical Assistance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>To_Process_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag updated by a button to trigger a workflow</description>
        <label>To Process Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Schedule_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether or not a Visit Needs to be Scheduled</description>
        <inlineHelpText>Determines whether or not a Visit Needs to be Scheduled</inlineHelpText>
        <label>To Schedule Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Took_FCC_Orientation_Module_1__c</fullName>
        <label>Took FCC Orientation - Module 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Took_FCC_Orientation__c</fullName>
        <label>Took FCC Orientation - Module 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Took_Medication_Administration_Training__c</fullName>
        <label>Took Medication Administration Training</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Took_SIDS_Training__c</fullName>
        <label>Took SIDS Training</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Took_Transportation_Training__c</fullName>
        <label>Took Transportation Training</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>